mise en ligne de la démo.

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "devDependencies": {
         "qunit": "latest",
         "requirejs": "latest",
-        "jsyg-pencil":"latest"
+        "jsyg-pathdrawer":"latest"
     },
     "repository": {
         "type": "git",
